# sgribthmaker

./: .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  Sgribthmaker.sln  Sgribthmaker.vcxproj  Sgribthmaker.vcxproj.filters  VisualStudioDirectories.props  meson.build  sgribthmaker.sln  sgribthmaker.vcxproj  sgribthmaker.vcxproj.filters  vcpkg.json  xmake.conf
.cmake/: Info.plist
.github/workflows/: cmake-multi-platform.yml
Data/: config.txt  michisoft-sgribthmaker.desktop  michisoft-sgribthmaker.xml
Data/Icon/: icon2.tga
gui/: CommandDialog.hui  CommandsMenu.hui  Console.hui  HeaderMenu.hui  MainWindow.hui  MainWindowLegacy.hui  Menu.hui  SettingsDialog.hui  Toolbar.hui  export.txt  hui_resources.txt  lang-eng.prelang  lang-ger.prelang
src/: AutoComplete.cpp  AutoComplete.h  CodeCompiler.cpp  CodeCompiler.h  CommandDialog.cpp  CommandDialog.h  Console.cpp  Console.h  Document.cpp  Document.h  FileBrowser.cpp  FileBrowser.h  HighlightSchema.cpp  HighlightSchema.h  HighlightScheme.cpp  HighlightScheme.h  History.cpp  History.h  LineNumberView.cpp  LineNumberView.h  Makefile  SettingsDialog.cpp  SettingsDialog.h  SgribthMaker.cpp  SgribthMaker.h  SgribthMakerWindow.cpp  SgribthMakerWindow.h  SourceView.cpp  SourceView.h  xmake.conf
src/Parser/: BaseParser.cpp  BaseParser.h  Parser.cpp  Parser.h  ParserC.cpp  ParserC.h  ParserHui.cpp  ParserKaba.cpp  ParserKaba.h  ParserPython.cpp  ParserPython.h  ParserShader.cpp  ParserShader.h  ParserText.cpp  ParserText.h
src/dialog/: CommandDialog.cpp  CommandDialog.h  SettingsDialog.cpp  SettingsDialog.h
src/gui/: CommandDialog.hui  Menu.hui  SettingsDialog.hui  hui_resources.txt
src/lib/: 00_config.h  config.h
src/lib/any/: any.cpp
src/lib/base/: base.h  strings.cpp  strings.h
src/lib/file/: file.h  path.cpp
src/lib/hui/: Application.cpp  Application.h  HuiApplication.cpp  HuiConfig.cpp  HuiConfig.h  HuiMenu.cpp  HuiMenu.h  HuiMenuGtk.cpp  HuiPanel.cpp  HuiPanel.h  HuiTimer.cpp  HuiToolbar.h  HuiToolbarGtk.cpp  HuiWindow.cpp  HuiWindow.h  HuiWindowGtk.cpp  Menu.cpp  Menu.h  MenuGtk.cpp  Painter.h  PainterGtk.cpp  Panel.cpp  Panel.h  Resource.cpp  Timer.h  Toolbar.cpp  ToolbarGtk.cpp  Window.cpp  Window.h  WindowGtk.cpp  _kaba_export.cpp  clipboard.h  error.cpp  hui.cpp  hui.h  hui.mk  hui_clipboard.cpp  hui_clipboard.h  hui_common.h  hui_common_dlg.cpp  (+21 more)
src/lib/hui/Controls/: Control.cpp  Control.h  ControlButton.h  ControlButtonGtk.cpp  ControlCheckBox.h  ControlCheckBoxGtk.cpp  ControlColorButton.h  ControlColorButtonGtk.cpp  ControlComboBox.h  ControlComboBoxGtk.cpp  ControlDrawingArea.h  ControlDrawingAreaGtk.cpp  ControlEditGtk.cpp  ControlExpander.h  ControlExpanderGtk.cpp  ControlGridGtk.cpp  ControlGroup.h  ControlGroupGtk.cpp  ControlLabelGtk.cpp  ControlListView.h  ControlListViewGtk.cpp  ControlMultilineEditGtk.cpp  ControlPaned.h  ControlPanedGtk.cpp  ControlProgressBarGtk.cpp  ControlRadioButtonGtk.cpp  ControlRevealerGtk.cpp  ControlScrollerGtk.cpp  ControlSeparator.h  ControlSeparatorGtk.cpp  ControlSlider.h  ControlSliderGtk.cpp  ControlSpinButton.h  ControlSpinButtonGtk.cpp  ControlTabControl.h  ControlTabControlGtk.cpp  ControlToggleButton.h  ControlToggleButtonGtk.cpp  ControlTreeView.h  ControlTreeViewGtk.cpp  (+66 more)
src/lib/hui/controls/: HuiControl.cpp  HuiControl.h  HuiControlButtonGtk.cpp  HuiControlButtonGtk.h  HuiControlCheckBoxGtk.cpp  HuiControlCheckBoxGtk.h  HuiControlColorButtonGtk.cpp  HuiControlColorButtonGtk.h  HuiControlComboBoxGtk.cpp  HuiControlComboBoxGtk.h  HuiControlDrawingAreaGtk.cpp  HuiControlDrawingAreaGtk.h  HuiControlEditGtk.cpp  HuiControlEditGtk.h  HuiControlGridGtk.cpp  HuiControlGridGtk.h  HuiControlGroupGtk.cpp  HuiControlGroupGtk.h  HuiControlGtk.cpp  HuiControlGtk.h  HuiControlLabelGtk.cpp  HuiControlLabelGtk.h  HuiControlListViewGtk.cpp  HuiControlListViewGtk.h  HuiControlMultilineEditGtk.cpp  HuiControlMultilineEditGtk.h  HuiControlProgressBarGtk.cpp  HuiControlProgressBarGtk.h  HuiControlRadioButtonGtk.cpp  HuiControlRadioButtonGtk.h  HuiControlSliderGtk.cpp  HuiControlSliderGtk.h  HuiControlSpinButtonGtk.cpp  HuiControlSpinButtonGtk.h  HuiControlTabControlGtk.cpp  HuiControlTabControlGtk.h  HuiControlToggleButtonGtk.cpp  HuiControlToggleButtonGtk.h  HuiControlTreeViewGtk.cpp  HuiControlTreeViewGtk.h
src/lib/image/: color.h  image.cpp  image_png.cpp
src/lib/kaba/: Context.cpp  Context.h  Module.cpp  Module.h  kaba.cpp  kaba.h
src/lib/kaba/compiler/: Compiler.cpp  compiler.cpp  serializer.cpp  serializer.h  serializer_amd64.cpp  serializer_arm.cpp  serializer_arm.h  serializer_x86.cpp  serializer_x86.h
src/lib/kaba/implicit/: implicit.cpp  implicit.h  implicit_regular.cpp
src/lib/kaba/lib/: common.h  lib.cpp  lib.h  lib_base.cpp  lib_file.cpp  lib_hui.cpp  lib_image.cpp  lib_math.cpp  lib_net.cpp  lib_nix.cpp  lib_sound.cpp  lib_threads.cpp  lib_x.cpp
src/lib/kaba/parser/: AbstractParser.cpp  Concretifier.cpp  Concretifier.h  Parser.cpp  template.cpp
src/lib/kaba/syntax/: Class.cpp  Parser.cpp  SyntaxTree.cpp  class.cpp  class.h  implicit.cpp  parser.cpp  preprocessor.cpp  syntax_tree.cpp  syntax_tree.h
src/lib/kabaexport/: KabaExporter.h
src/lib/math/: complex.h  math.h  matrix.h  matrix3.h  plane.h  quaternion.h  ray.h  rect.h  vector.h
src/lib/net/: net.cpp
src/lib/nix/: nix.cpp  nix.h  nix_common.h  nix_config.h  nix_input.cpp  nix_vertexbuffer.h  nix_view.cpp
src/lib/script/: script.cpp  script.h  script.mk
src/lib/script/asm/: asm.cpp  asm.h
src/lib/script/compiler/: compiler.cpp  script_compiler.cpp  script_serializer.cpp  serializer.cpp  serializer.h
src/lib/syntaxhighlight/: BaseParser.cpp  ParserKaba.cpp
src/lib/types/: types.mk
src/lib/x/: 00_config.h  x.h
src/parser/: BaseParser.cpp  BaseParser.h  ParserC.cpp  ParserCmake.cpp  ParserCmake.h  ParserHui.h  ParserIni.cpp  ParserIni.h  ParserKaba.cpp  ParserShader.cpp  ParserShader.h
static/: hui_resources.txt  license_small.txt  michisoft-sgribthmaker.desktop
static/Icon/: icon16.tga  icon24.tga  icon32.tga  icon48.tga  icon64.tga  pspbrwse.jbf
(+21 files in other folders)
